[gd_scene load_steps=34 format=2]

[ext_resource path="res://maps/base/BaseMap.gd" type="Script" id=1]
[ext_resource path="res://actors/spawn_point/spawn_point.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/content/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://maps/base/seeker_release.ogg" type="AudioStream" id=4]
[ext_resource path="res://maps/base/ic_stamina.png" type="Texture" id=5]
[ext_resource path="res://maps/base/ic_visibility.png" type="Texture" id=6]
[ext_resource path="res://touch_screen/button_sprint_pressed.png" type="Texture" id=7]
[ext_resource path="res://touch_screen/button_use_pressed.png" type="Texture" id=8]
[ext_resource path="res://touch_screen/button_use_normal.png" type="Texture" id=9]
[ext_resource path="res://touch_screen/button_sprint_normal.png" type="Texture" id=10]
[ext_resource path="res://touch_screen/button_up_normal.png" type="Texture" id=11]
[ext_resource path="res://touch_screen/button_left_normal.png" type="Texture" id=12]
[ext_resource path="res://touch_screen/button_left_pressed.png" type="Texture" id=13]
[ext_resource path="res://touch_screen/button_down_pressed.png" type="Texture" id=14]
[ext_resource path="res://touch_screen/button_down_normal.png" type="Texture" id=15]
[ext_resource path="res://touch_screen/button_right_normal.png" type="Texture" id=16]
[ext_resource path="res://touch_screen/button_right_pressed.png" type="Texture" id=17]
[ext_resource path="res://touch_screen/button_up_pressed.png" type="Texture" id=18]
[ext_resource path="res://touch_screen/button_horn_pressed.png" type="Texture" id=19]
[ext_resource path="res://touch_screen/button_lock_normal.png" type="Texture" id=20]
[ext_resource path="res://touch_screen/button_horn_normal.png" type="Texture" id=21]
[ext_resource path="res://touch_screen/button_lock_pressed.png" type="Texture" id=22]
[ext_resource path="res://utilities/wallclock_timer/WallClockTimer.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 121.767, 379.178 )

[sub_resource type="VisualShaderNodeScalarFunc" id=2]
output_port_for_preview = 0
function = 0

[sub_resource type="VisualShaderNodeScalarClamp" id=3]
default_input_values = [ 0, 0.0, 1, 0.1, 2, 0.8 ]

[sub_resource type="VisualShaderNodeInput" id=4]
input_name = "time"

[sub_resource type="VisualShaderNodeScalarOp" id=5]
operator = 2

[sub_resource type="VisualShaderNodeScalarConstant" id=6]
constant = 8.0

[sub_resource type="VisualShader" id=7]
code = "shader_type canvas_item;



void vertex() {
// Output:0

}

void fragment() {
// Input:2
	float n_out2p0;
	n_out2p0 = TIME;

// Scalar:5
	float n_out5p0;
	n_out5p0 = 8.000000;

// ScalarOp:4
	float n_out4p0;
	n_out4p0 = n_out2p0 * n_out5p0;

// ScalarFunc:10
	float n_out10p0;
	n_out10p0 = sin(n_out4p0);

// ScalarClamp:13
	float n_in13p1 = 0.10000;
	float n_in13p2 = 0.80000;
	float n_out13p0;
	n_out13p0 = clamp( n_out10p0, n_in13p1, n_in13p2 );

// Output:0
	COLOR.a = n_out13p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -37.5499, 29.0186 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 1220, 180 )
nodes/fragment/2/node = SubResource( 4 )
nodes/fragment/2/position = Vector2( 40, 120 )
nodes/fragment/4/node = SubResource( 5 )
nodes/fragment/4/position = Vector2( 280, 200 )
nodes/fragment/5/node = SubResource( 6 )
nodes/fragment/5/position = Vector2( 20, 320 )
nodes/fragment/10/node = SubResource( 2 )
nodes/fragment/10/position = Vector2( 500, 200 )
nodes/fragment/13/node = SubResource( 3 )
nodes/fragment/13/position = Vector2( 780, 200 )
nodes/fragment/connections = PoolIntArray( 2, 0, 4, 0, 5, 0, 4, 1, 4, 0, 10, 0, 10, 0, 13, 0, 13, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 64, 32 )

[node name="base" type="Node2D"]
script = ExtResource( 1 )

[node name="map" type="Node2D" parent="."]

[node name="ambient" type="CanvasModulate" parent="."]
color = Color( 0.313726, 0.313726, 0.352941, 1 )

[node name="PlayerSpawns" type="Node" parent="."]

[node name="Seeker1" parent="PlayerSpawns" instance=ExtResource( 2 )]

[node name="Seeker2" parent="PlayerSpawns" instance=ExtResource( 2 )]

[node name="Seeker3" parent="PlayerSpawns" instance=ExtResource( 2 )]

[node name="Seeker4" parent="PlayerSpawns" instance=ExtResource( 2 )]

[node name="Seeker5" parent="PlayerSpawns" instance=ExtResource( 2 )]

[node name="Hider1" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider2" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider3" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider4" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider5" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider6" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider7" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider8" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider9" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="Hider10" parent="PlayerSpawns" instance=ExtResource( 2 )]
team = "hider_spawn"

[node name="players" type="Node" parent="."]

[node name="WinZone" type="Area2D" parent="." groups=[
"win_zones",
]]
position = Vector2( 4224.49, 131.887 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinZone"]
rotation = -1.57079
shape = SubResource( 1 )

[node name="Pregame" type="Node2D" parent="WinZone"]
light_mask = 0
z_index = 2

[node name="ColorRect" type="ColorRect" parent="WinZone/Pregame"]
light_mask = 0
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -394.0
margin_top = -142.0
margin_right = 396.0
margin_bottom = 138.0
color = Color( 1, 0, 0, 0.768627 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameStartTimer" type="Node" parent="."]
script = ExtResource( 23 )
__meta__ = {
"_editor_description_": "Warm up time, everyone gets to look at the map, and get ready."
}
wait_time = 10

[node name="GracePeriodTimer" type="Node" parent="."]
script = ExtResource( 23 )
__meta__ = {
"_editor_description_": "Seekers are held captive for this ammount of time. Lets hiders get a head start."
}
wait_time = 10

[node name="GameTimer" type="Node" parent="."]
script = ExtResource( 23 )
__meta__ = {
"_editor_description_": "If this timer expires, the hiders lose."
}
wait_time = 900

[node name="UiLayer" type="CanvasLayer" parent="."]

[node name="GraceTimerLabel" type="Label" parent="UiLayer"]
visible = false
anchor_right = 1.0
margin_bottom = 50.0
size_flags_horizontal = 9
size_flags_vertical = 8
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStartLabel" type="Label" parent="UiLayer"]
visible = false
anchor_right = 1.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Starting in 5"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PregameTeamLabel" type="Label" parent="UiLayer"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -52.0
custom_fonts/font = ExtResource( 3 )
text = "You are a Fugitive"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverDialog" type="WindowDialog" parent="UiLayer"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -320.0
margin_right = 350.0
margin_bottom = 320.0
rect_min_size = Vector2( 700, 640 )
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UiLayer/GameOverDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerLabel" type="Label" parent="UiLayer/GameOverDialog/VBoxContainer"]
margin_right = 700.0
margin_bottom = 52.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "Seekers Win!"
align = 1
valign = 1

[node name="PlayerSummary" type="RichTextLabel" parent="UiLayer/GameOverDialog/VBoxContainer"]
margin_top = 60.0
margin_right = 700.0
margin_bottom = 595.0
size_flags_vertical = 3
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToLobbyButton" type="Button" parent="UiLayer/GameOverDialog/VBoxContainer"]
margin_top = 603.0
margin_right = 700.0
margin_bottom = 640.0
text = "Back to Lobby"

[node name="PlayerHud" type="Control" parent="UiLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.16635
margin_right = 1.16638
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UiLayer/PlayerHud"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -104.0
margin_right = 256.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityContainer" type="Control" parent="UiLayer/PlayerHud/VBoxContainer"]
margin_right = 512.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UiLayer/PlayerHud/VBoxContainer/VisibilityContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -24.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UiLayer/PlayerHud/VBoxContainer/VisibilityContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
texture = ExtResource( 6 )

[node name="VisibilityBar" type="ProgressBar" parent="UiLayer/PlayerHud/VBoxContainer/VisibilityContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 512.0
margin_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaContainer" type="Control" parent="UiLayer/PlayerHud/VBoxContainer"]
margin_top = 56.0
margin_right = 512.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UiLayer/PlayerHud/VBoxContainer/StaminaContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -11.4558
margin_bottom = -9.45581
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UiLayer/PlayerHud/VBoxContainer/StaminaContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 49.0
texture = ExtResource( 5 )
stretch_mode = 5

[node name="StaminaBar" type="ProgressBar" parent="UiLayer/PlayerHud/VBoxContainer/StaminaContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 512.0
margin_bottom = 49.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimerLabel" type="Label" parent="UiLayer/PlayerHud"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -71.1665
margin_top = 10.0
margin_right = -26.1665
margin_bottom = 35.0
text = "0:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SafeZoneLabel" type="Label" parent="UiLayer/PlayerHud"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -54.0
margin_right = 54.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Safe!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftTouchContainer" type="Control" parent="UiLayer/PlayerHud"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -319.0
margin_right = 319.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchUseButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/LeftTouchContainer"]
position = Vector2( 168.834, 209 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 9 )
pressed = ExtResource( 8 )
shape = SubResource( 9 )
action = "use"
visibility_mode = 1

[node name="TouchLockButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/LeftTouchContainer"]
position = Vector2( 168.834, 99 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 20 )
pressed = ExtResource( 22 )
shape = SubResource( 9 )
action = "lock_car"
visibility_mode = 1

[node name="TouchUpButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/LeftTouchContainer"]
position = Vector2( 8.83365, 29 )
scale = Vector2( 2, 2 )
normal = ExtResource( 11 )
pressed = ExtResource( 18 )
shape = SubResource( 9 )
action = "ui_up"
visibility_mode = 1

[node name="TouchDownButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/LeftTouchContainer"]
position = Vector2( 8.83365, 182 )
scale = Vector2( 2, 2 )
normal = ExtResource( 15 )
pressed = ExtResource( 14 )
shape = SubResource( 9 )
action = "ui_down"
visibility_mode = 1

[node name="RightTouchContainer" type="Control" parent="UiLayer/PlayerHud"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TouchHornButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/RightTouchContainer"]
position = Vector2( 38.8337, 246 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 21 )
pressed = ExtResource( 19 )
shape = SubResource( 9 )
action = "car_horn"
visibility_mode = 1

[node name="TouchRightButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/RightTouchContainer"]
position = Vector2( 208.834, 90 )
scale = Vector2( 2, 2 )
normal = ExtResource( 16 )
pressed = ExtResource( 17 )
shape = SubResource( 9 )
action = "ui_right"
visibility_mode = 1

[node name="TouchLeftButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/RightTouchContainer"]
position = Vector2( 58.8337, 90 )
scale = Vector2( 2, 2 )
normal = ExtResource( 12 )
pressed = ExtResource( 13 )
shape = SubResource( 9 )
action = "ui_left"
visibility_mode = 1

[node name="TouchSprintButton" type="TouchScreenButton" parent="UiLayer/PlayerHud/RightTouchContainer"]
position = Vector2( 148.833, 246 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 10 )
pressed = ExtResource( 7 )
shape = SubResource( 10 )
action = "sprint"
visibility_mode = 1

[node name="RoadWalls" type="Node" parent="."]

[node name="PregameCamera" type="Camera2D" parent="."]
position = Vector2( 2254.28, -1885.59 )
zoom = Vector2( 10, 10 )

[node name="SeekerReleaseAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -40.0
[connection signal="timeout" from="GameStartTimer" to="." method="_on_GameStartTimer_timeout"]
[connection signal="timeout" from="GracePeriodTimer" to="." method="_on_GracePeriodTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="popup_hide" from="UiLayer/GameOverDialog" to="." method="_on_GameOverDialog_popup_hide"]
[connection signal="pressed" from="UiLayer/GameOverDialog/VBoxContainer/BackToLobbyButton" to="." method="_on_BackToLobbyButton_pressed"]
